Add new methods to get all employee like i use stream insted of collector